Update and rename cors_test.html to get_id_test.html

--- a/get_id_test.html
+++ b/get_id_test.html
@@ -17,6 +17,7 @@
     <td><input type="password" size="50" id="password"></td>
   </tr>
 </table>
+<button onclick="SUBMIT(); return false;">Get Info</button>
 <hr>
 <div id="status"></div>
 <textarea readonly="readonly" cols="60" rows="10"></textarea>
