--- a/get_id_test.html
+++ b/get_id_test.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Bitmoji Hacks: get ID</title>
 <meta name="viewport" content="width=device-width">
+<script src="get_avatar_id_bitmoji_acc.js"></script>
 </head>
 
 <body>
