--- a/get_id_test.html
+++ b/get_id_test.html
@@ -21,6 +21,6 @@
 <button onclick="SUBMIT(); return false;">Get Info</button>
 <hr>
 <div id="status"></div>
-<textarea readonly="readonly" cols="60" rows="10"></textarea>
+<textarea id="response" readonly="readonly" cols="60" rows="10"></textarea>
 </body>
 </html>
